--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-
+@import url('public/font/PPWoodland-Bold.otf');
+@import url('public/font/PPWoodland-Ultralight.otf');
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -8,6 +9,22 @@
 @source '../**/*.js';
 @source "../views";
 
+@font-face {
+    font-family: 'ppbold';
+    src: url('/fonts/PPWoodland-Bold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PPWoodland-Ultralight';
+    src: url('/fonts/PPWoodland-Ultralight.otf') format('otf');
+    font-weight: 300;
+    font-style: normal;
+}
+
 @theme {
     --font-lato: 'Lato', sans-serif;
+    --font-ppwl-bold: 'PPWoodLand-Bold', sans-serif;
+    --font-ppwl-ultralight: 'PPWoodLand-Ultralight', sans-serif;
 }
