fix font ppwooland

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,35 +1,16 @@
 @import 'tailwindcss';
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-/* @font-face {
-    font-family: 'PPWoodland-Bold';
-    src: url('/fonts/PPWoodland-Bold.woff2') format('woff2');
-    font-weight: bold;
-    font-style: normal;
-} */
-
-/* @font-face {
-    font-family: 'PPWoodland-Ultralight';
-    src: url('/fonts/PPWoodland-Ultralight.otf') format('opentype');
-    font-weight: 300;
-    font-style: normal;
-} */
-
 @font-face {
-    font-family: 'ppbold';
-    src: url('/fonts/ppbold.woff2') format('woff2'),
-        url('/fonts/ppbold.otf') format('opentype'),
-        url('/fonts/ppbold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+    font-family: "ppbold";
+    src: 
+        url('/public/fonts/ppbold.otf') format('opentype'),
+        ;
 }
-
 
 @theme {
     --font-lato: 'Lato', sans-serif;
     --font-ppbold: 'ppbold', sans-serif;
-    --font-ppwl-ultralight: 'PPWoodLand-Ultralight', sans-serif;
 }
 
 .fade-in-up {
